import { describe, test, expect, vitest } from 'vitest'
import { act, fireEvent } from '@testing-library/react'
import { render } from '../../support/testUtils'
import { GREEN } from '../../utils/colorSchemes'
import PlaythroughForm from './playthroughForm'

describe('PlaythroughForm', () => {
  test('is a create form by default', () => {
    const wrapper = render(
      <PlaythroughForm submitForm={() => {}} buttonColor={GREEN} />
    )

    // Both the header and submit button should have text 'Create Playthrough'
    expect(wrapper.getAllByText('Create Playthrough').length).toEqual(2)
  })

  test('is an edit form if the type prop is set to "edit"', () => {
    const wrapper = render(<PlaythroughForm submitForm={() => {}} type="edit" />)

    // Both the header and submit button should have the text 'Update Playthrough'
    expect(wrapper.getAllByText('Update Playthrough').length).toEqual(2)
  })

  test('displays the inputs and submit button', () => {
    const wrapper = render(
      <PlaythroughForm submitForm={() => {}} buttonColor={GREEN} />
    )

    expect(wrapper.getByLabelText('Name')).toBeTruthy()
    expect(wrapper.getByLabelText('Description')).toBeTruthy()
    expect(wrapper.getByTestId('playthroughFormSubmit')).toBeTruthy()
  })

  // TODO: Re-enable when we start using testing-library/jest-dom
  test.skip('uses the default values if given', () => {
    const wrapper = render(
      <PlaythroughForm
        submitForm={() => {}}
        type="edit"
        defaultName="My Playthrough 1"
        defaultDescription="This playthrough has a description"
        buttonColor={GREEN}
      />
    )

    const nameField = wrapper.getByLabelText('Name')
    const descField = wrapper.getByLabelText('Description')

    expect(nameField.attributes.getNamedItem('default-value')).toEqual(
      'My Playthrough 1'
    )
    expect(descField.attributes.getNamedItem('default-value')).toEqual(
      'This playthrough has a description'
    )
  })

  test('create form matches snapshot', () => {
    const wrapper = render(
      <PlaythroughForm submitForm={() => {}} type="create" buttonColor={GREEN} />
    )

    expect(wrapper).toMatchSnapshot()
  })

  test('edit form matches snapshot', () => {
    const wrapper = render(
      <PlaythroughForm
        submitForm={() => {}}
        type="edit"
        defaultName="My Playthrough 1"
        defaultDescription="This playthrough has a description"
        buttonColor={GREEN}
      />
    )

    expect(wrapper).toMatchSnapshot()
  })

  describe('submitting the form', () => {
    test('calls the submit function with the given attributes', async () => {
      const submit = vitest.fn()

      const wrapper = render(
        <PlaythroughForm submitForm={submit} buttonColor={GREEN} />
      )

      const form = wrapper.getByTestId('playthroughForm')
      const nameField = wrapper.getByLabelText('Name')
      const descField = wrapper.getByLabelText('Description')

      fireEvent.change(nameField, { target: { value: 'Playthrough Name' } })
      fireEvent.change(descField, { target: { value: 'New playthrough description' } })

      await act(() => fireEvent.submit(form))

      expect(submit).toHaveBeenCalledWith({
        name: 'Playthrough Name',
        description: 'New playthrough description',
      })
    })

    test('trims strings', async () => {
      const submit = vitest.fn()

      const wrapper = render(
        <PlaythroughForm submitForm={submit} buttonColor={GREEN} />
      )

      const form = wrapper.getByTestId('playthroughForm')
      const nameField = wrapper.getByLabelText('Name')
      const descField = wrapper.getByLabelText('Description')

      fireEvent.change(nameField, { target: { value: '  Playthrough Name ' } })
      fireEvent.change(descField, {
        target: { value: ' New playthrough description   ' },
      })

      await act(() => fireEvent.submit(form))

      expect(submit).toHaveBeenCalledWith({
        name: 'Playthrough Name',
        description: 'New playthrough description',
      })
    })
  })
})
