// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlaythroughForm > create form matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="_root_834674"
      >
        <h3
          class="_header_834674"
        >
          Create Playthrough
        </h3>
        <form
          data-testid="playthroughForm"
          style="--button-background-color: #00a323; --button-text-color: #fff; --button-hover-color: #00921f; --button-border-color: #00821c;"
        >
          <fieldset
            class="_fieldset_834674"
          >
            <label
              class="_label_834674"
            >
              Name
              <input
                class="_input_834674"
                name="name"
                pattern="^\\s*[A-Za-z0-9 \\-',]*\\s*$"
                placeholder="Name"
                title="Name can contain only alphanumeric characters, spaces, commas, hyphens, and apostrophes"
                type="text"
              />
            </label>
          </fieldset>
          <fieldset
            class="_fieldset_834674"
          >
            <label
              class="_label_834674"
            >
              Description
              <input
                class="_input_834674"
                name="description"
                placeholder="Description"
              />
            </label>
          </fieldset>
          <button
            class="_submit_834674"
            data-testid="playthroughFormSubmit"
            type="submit"
          >
            Create Playthrough
          </button>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="_root_834674"
    >
      <h3
        class="_header_834674"
      >
        Create Playthrough
      </h3>
      <form
        data-testid="playthroughForm"
        style="--button-background-color: #00a323; --button-text-color: #fff; --button-hover-color: #00921f; --button-border-color: #00821c;"
      >
        <fieldset
          class="_fieldset_834674"
        >
          <label
            class="_label_834674"
          >
            Name
            <input
              class="_input_834674"
              name="name"
              pattern="^\\s*[A-Za-z0-9 \\-',]*\\s*$"
              placeholder="Name"
              title="Name can contain only alphanumeric characters, spaces, commas, hyphens, and apostrophes"
              type="text"
            />
          </label>
        </fieldset>
        <fieldset
          class="_fieldset_834674"
        >
          <label
            class="_label_834674"
          >
            Description
            <input
              class="_input_834674"
              name="description"
              placeholder="Description"
            />
          </label>
        </fieldset>
        <button
          class="_submit_834674"
          data-testid="playthroughFormSubmit"
          type="submit"
        >
          Create Playthrough
        </button>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PlaythroughForm > edit form matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="_root_834674"
      >
        <h3
          class="_header_834674"
        >
          Update Playthrough
        </h3>
        <form
          data-testid="playthroughForm"
          style="--button-background-color: #00a323; --button-text-color: #fff; --button-hover-color: #00921f; --button-border-color: #00821c;"
        >
          <fieldset
            class="_fieldset_834674"
          >
            <label
              class="_label_834674"
            >
              Name
              <input
                class="_input_834674"
                name="name"
                pattern="^\\s*[A-Za-z0-9 \\-',]*\\s*$"
                placeholder="Name"
                title="Name can contain only alphanumeric characters, spaces, commas, hyphens, and apostrophes"
                type="text"
                value="My Playthrough 1"
              />
            </label>
          </fieldset>
          <fieldset
            class="_fieldset_834674"
          >
            <label
              class="_label_834674"
            >
              Description
              <input
                class="_input_834674"
                name="description"
                placeholder="Description"
                value="This playthrough has a description"
              />
            </label>
          </fieldset>
          <button
            class="_submit_834674"
            data-testid="playthroughFormSubmit"
            type="submit"
          >
            Update Playthrough
          </button>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="_root_834674"
    >
      <h3
        class="_header_834674"
      >
        Update Playthrough
      </h3>
      <form
        data-testid="playthroughForm"
        style="--button-background-color: #00a323; --button-text-color: #fff; --button-hover-color: #00921f; --button-border-color: #00821c;"
      >
        <fieldset
          class="_fieldset_834674"
        >
          <label
            class="_label_834674"
          >
            Name
            <input
              class="_input_834674"
              name="name"
              pattern="^\\s*[A-Za-z0-9 \\-',]*\\s*$"
              placeholder="Name"
              title="Name can contain only alphanumeric characters, spaces, commas, hyphens, and apostrophes"
              type="text"
              value="My Playthrough 1"
            />
          </label>
        </fieldset>
        <fieldset
          class="_fieldset_834674"
        >
          <label
            class="_label_834674"
          >
            Description
            <input
              class="_input_834674"
              name="description"
              placeholder="Description"
              value="This playthrough has a description"
            />
          </label>
        </fieldset>
        <button
          class="_submit_834674"
          data-testid="playthroughFormSubmit"
          type="submit"
        >
          Update Playthrough
        </button>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
